fixed alignment bug

--- a/src/molecules/glider/_glider.scss
+++ b/src/molecules/glider/_glider.scss
@@ -59,6 +59,7 @@
 	user-select: none;
 
 	img {
+		display: block;
 		max-width: 100%;
 	}
 
